 2011-10-05 07:10  alexpeshkoff 
   M src/jrd/LocksCache.h
   M src/jrd/isc_sync.cpp
Fixed linux build

 2011-09-09 08:55  paul_reeves 
   M builds/install/arch-specific/win32/ba/custom_messages_ba.inc
   M builds/install/arch-specific/win32/de/custom_messages_de.inc
   M builds/install/arch-specific/win32/es/custom_messages_es.inc
   M builds/install/arch-specific/win32/fr/custom_messages_fr.inc
   M builds/install/arch-specific/win32/hu/custom_messages_hu.inc
   M builds/install/arch-specific/win32/it/custom_messages_it.inc
   M builds/install/arch-specific/win32/pl/custom_messages_pl.inc
   M builds/install/arch-specific/win32/pt/custom_messages_pt.inc
   M builds/install/arch-specific/win32/ru/custom_messages_ru.inc
   M builds/install/arch-specific/win32/si/custom_messages_si.inc
add i18n fallback message for when translation is out of date

 2011-09-08 09:56  paul_reeves 
   A builds/install/arch-specific/win32/cz
   A builds/install/arch-specific/win32/cz/custom_messages_cz.inc
Add i18n strings for cz.

 2011-09-08 09:51  paul_reeves 
   M builds/install/arch-specific/win32/i18n_readme.txt
bring i18n instructions up to date

 2011-09-08 09:50  paul_reeves 
   M builds/install/arch-specific/win32/FirebirdInstallEnvironmentChecks.inc
   M builds/install/arch-specific/win32/FirebirdInstallSupportFunctions.inc
   M builds/install/arch-specific/win32/Readme.txt
misc routine maintenance

 2011-09-08 09:49  paul_reeves 
   M builds/install/arch-specific/win32/FirebirdInstall_20.iss
remove hard-coded version string.
misc maintenance

 2011-09-08 09:48  paul_reeves 
   M builds/install/arch-specific/win32/custom_messages.inc
add i18n message

 2011-09-08 09:46  paul_reeves 
   M builds/install/arch-specific/win32/BuildExecutableInstall.bat
calc md5sum after creating packages.
misc routine maintenance.

 2011-08-25 11:54  paulbeach 
   M builds/posix/Makefile.in.libfbclient
   M builds/posix/prefix.darwin_i386