@@ -1,3 +1,10 @@
+ 2011-10-06 12:40  alexpeshkoff 
+   M builds/install/arch-specific/linux/classic/makeInstallImage.sh.in
+   M builds/install/arch-specific/linux/super/makeInstallImage.sh.in
+   M builds/install/misc/classicLibrary.sh.in
+   M builds/install/misc/superLibrary.sh.in
+Added license files to linux packages
+
  2011-10-05 07:10  alexpeshkoff 
    M src/jrd/LocksCache.h
    M src/jrd/isc_sync.cpp
